fixed hover issue when arrowcontainer and img overlap.

--- a/styles/BaseCarousel.module.css
+++ b/styles/BaseCarousel.module.css
@@ -60,8 +60,10 @@
     justify-content: space-between;
     position: absolute;
     transform: translateY(-3rem);
+    pointer-events: none;
 }
 .arrowContainer{
+    pointer-events: all;
     cursor: pointer;
     max-height:2rem;
     max-width: 2rem;
