--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -13,7 +13,6 @@
     justify-content: space-between;
     align-items: center;
     width:90%;
-    cursor: pointer;
 }
 .arrow{
     background-color: rgba(0, 0, 0, .8);
