--- a/styles/Statement.module.css
+++ b/styles/Statement.module.css
@@ -7,6 +7,9 @@
     background-color: white;
     height:5vh;
 }
+.statement{
+    display:flex;
+}
 .left{
     margin-top:-10px;
     font-size: 2.6rem;
